force-app/main/default/objects/Passenger_Details__c/Passenger_Details__c.object-meta.xml
<CustomObject>
    <label>Passenger Detail</label>
    <nameField>
        <label>Passengers Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Passenger Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>