force-app/main/default/objects/Passenger_Details__c/fields/Airline_PNR__c.field-meta.xml
<CustomField>
    <fullName>Airline_PNR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Airline PNR</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Passenger_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>