force-app/main/default/objects/Passenger_Details__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Passenger_Details</relationshipName>
    <type>Lookup</type>
</CustomField>