force-app/main/default/objects/Passenger_Details__c/fields/dob__c.field-meta.xml
<CustomField>
    <fullName>dob__c</fullName>
    <label>dob</label>
    <type>Date</type>
</CustomField>