force-app/main/default/objects/Passenger_Details__c/fields/Individual_Booking_Details__c.field-meta.xml
<CustomField>
    <fullName>Individual_Booking_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual Booking Details</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Passenger Details</relationshipLabel>
    <relationshipName>Passenger_Details</relationshipName>
    <type>Lookup</type>
</CustomField>