force-app/main/default/objects/Passenger_Details__c/fields/Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead ID</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Passenger_Details</relationshipName>
    <type>Lookup</type>
</CustomField>