force-app/main/default/objects/Passenger_Details__c/fields/Nationalities__c.field-meta.xml
<CustomField>
    <fullName>Nationalities__c</fullName>
    <label>Nationality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Nationality</valueSetName>
    </valueSet>
</CustomField>