force-app/main/default/objects/Passenger_Details__c/fields/Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity ID</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Passenger_Details</relationshipName>
    <type>Lookup</type>
</CustomField>