force-app/main/default/objects/Passenger_Details__c/fields/Order_Request__c.field-meta.xml
<CustomField>
    <fullName>Order_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Request</label>
    <referenceTo>Order_Request__c</referenceTo>
    <relationshipLabel>Passenger Details</relationshipLabel>
    <relationshipName>Passenger_Details</relationshipName>
    <type>Lookup</type>
</CustomField>