force-app/main/default/objects/Passenger_Details__c/fields/Passport_Govt_Id__c.field-meta.xml
<CustomField>
    <fullName>Passport_Govt_Id__c</fullName>
    <label>Passport/Govt Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>