force-app/main/default/objects/Passenger_Details__c/fields/Show_as_Placard__c.field-meta.xml
<CustomField>
    <fullName>Show_as_Placard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show as Placard</label>
    <type>Checkbox</type>
</CustomField>