force-app/main/default/objects/Passenger_Details__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>GMR</fullName>
            </value>
            <value>
                <fullName>HOI</fullName>
            </value>
            <value>
                <fullName>ADL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>