force-app/main/default/objects/Passenger_Details__c/fields/Travel_PNR_No__c.field-meta.xml
<CustomField>
    <fullName>Travel_PNR_No__c</fullName>
    <label>Travel PNR No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>